# WeatherMan

./: .gitignore  CLAUDE.md  LICENSE.md  Learnings.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  claude.yaml
src/weatherman/: air_quality.py  app.py  cli.py  geocoder.py  weather.py  wmo_codes.py
tests/: test_air_quality.py  test_cli.py  test_end_to_end.py  test_geocoder.py  test_weather.py  test_wmo_codes.py
